Update README.md, .vscode/launch.json files