@@ -267,6 +267,16 @@ Note that if you deviate from this precise directory structure, you may need to 
 
 If these steps worked (and you setup java, and the recommended VSCode extensions properly), you should be able to run the starter code game.
 
+## `JavaFX Runtime Components are missing`
+
+If running locally make sure that you've followed the steps above.  If running on VLab/CSE, then make sure that ALL launch configurations in `.vscode/launch.json` contain the line;
+
+```json
+"vmArgs": "--module-path ./lib/symlink_javafx --add-modules javafx.controls,javafx.fxml,javafx.media -enableassertions"
+```
+
+It's just VSCode creating new configurations rather than recycling the old ones.  This seems 
+
 ## Submission
 
 To submit, make a tag to show that your code at the current commit is ready for your submission using the command:
